# fiber-gateway-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
feature/: coroutine.md  event.md  ip_address.md  mutex.md  script.md  signal.md  tcp_listener.md  timer_handle.md  unix_listener.md
src/: main.cpp
src/async/: Coroutine.cpp  Coroutine.h  CoroutineFramePool.cpp  CoroutineFramePool.h  CoroutinePromiseBase.h  Mutex.cpp  Mutex.h  Scheduler.h  Signal.cpp  Signal.h  Sleep.cpp  Sleep.h  Spawn.h  ThreadGroup.cpp  ThreadGroup.h
src/common/: Assert.h  IoError.cpp  IoError.h  NonCopyable.h  NonMovable.h
src/common/json/: JsGc.cpp  JsGc.h  JsNode.cpp  JsNode.h  JsValueEncode.cpp  JsValueEncode.h  JsValueOps.cpp  JsValueOps.h  JsonDecode.cpp  JsonDecode.h  JsonEncode.cpp  JsonEncode.h  Utf.cpp  Utf.h
src/common/mem/: Allocator.cpp  Allocator.h  Buffer.cpp  Buffer.h
src/event/: EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopGroup.cpp  EventLoopGroup.h  MpscQueue.h  Poller.cpp  Poller.h  SignalService.cpp  SignalService.h  TimerQueue.cpp  TimerQueue.h
src/net/: IpAddress.cpp  IpAddress.h  SocketAddress.cpp  SocketAddress.h  TcpListener.cpp  TcpListener.h  UnixAddress.cpp  UnixAddress.h  UnixListener.cpp  UnixListener.h
src/net/detail/: AcceptFd.h
src/script/: ExecutionContext.h  Library.h  Runtime.cpp  Runtime.h  Script.cpp  Script.h  ScriptCompiler.cpp  ScriptCompiler.h
src/script/ast/: Assign.h  BinaryOperator.h  Block.h  BreakStatement.h  ConstantVal.h  ContinueStatement.h  DirectiveStatement.h  ExpandArrArg.h  Expression.h  ExpressionStatement.h  ForeachStatement.h  FunctionCall.h  Identifier.h  IfStatement.h  Indexer.h  InlineList.h  InlineObject.h  Literal.h  LogicRelationalExpression.h  MaybeLValue.h  Node.h  Operator.cpp  Operator.h  PropertyReference.h  ReturnStatement.h  Statement.h  Ternary.h  ThrowStatement.h  TryCatchStatement.h  UnaryOperator.h  VariableDeclareStatement.h  VariableReference.h
src/script/async/: AsyncExecutionContext.h  Task.h
src/script/ir/: Code.h  Compiled.h  Compiler.cpp  Compiler.h
src/script/parse/: Optimiser.cpp  Optimiser.h  ParseError.h  Parser.cpp  Parser.h  Token.h  TokenKind.cpp  TokenKind.h  Tokenizer.cpp  Tokenizer.h
src/script/run/: Access.cpp  Access.h  Binaries.cpp  Binaries.h  Compares.cpp  Compares.h  InterpreterVm.cpp  InterpreterVm.h  Unaries.cpp  Unaries.h  VmError.h
src/script/std/: StdLibrary.cpp  StdLibrary.h  StdLibraryFuncs.cpp
tests/: ArrayTest.cpp  EventLoopTest.cpp  GeneratorTest.cpp  IpAddressTest.cpp  IteratorTest.cpp  JsValueEncodeTest.cpp  JsValueOpsTest.cpp  MutexTest.cpp  ParserTest.cpp  SanityTest.cpp  ScriptCompilerTest.cpp  ScriptExecutionTest.cpp  ScriptParserTest.cpp  ScriptPlanTest.cpp  ScriptRuntimeOpsTest.cpp  SignalTest.cpp  SleepTest.cpp  TcpListenerTest.cpp  TestHelpers.h  ThreadGroupTest.cpp
